- Fixed subscribe form on Firefox (-moz-box-sizing)

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -249,6 +249,8 @@ aside.highlight
   #subemail
     width: 100%
     padding: 0.3em 0.5em
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
     box-sizing: border-box
     margin-top: 1px
     margin-bottom: 0.5em
